--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
   provider: ^6.1.2
+  http: ^1.2.2
+  nav_service: ^0.1.0
+  hive_ce_flutter: ^2.1.0
+  hive_ce: ^2.6.0
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^6.0.2
+  pretty_qr_code: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.13
+  hive_ce_generator: ^1.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
